WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
240405
HTMLMediaElement preservesPitch=false and playbackRate aren't correctly handled when hooked up to AudioContext
https://bugs.webkit.org/show_bug.cgi?id=240405
Summary
HTMLMediaElement preservesPitch=false and playbackRate aren't correctly handl...
Youssef Soliman
Reported
2022-05-13 16:57:55 PDT
Created
attachment 459332
[details]
Test Case An audio playing media element like <video> or <audio> hooked up to an audio context via `createMediaElementSource` results in choppy audio and `preservesPitch=false` is not honoured if set.
Attachments
Test Case
(4.79 MB, application/zip)
2022-05-13 16:57 PDT
,
Youssef Soliman
no flags
Details
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2022-05-13 17:13:47 PDT
<
rdar://problem/93275149
>
Glenn Ruehle
Comment 2
2024-07-16 13:31:58 PDT
Any updates on this bug? It still occurs in Safari 17.5. Here is another test case: Running example:
https://gruehle.github.io/AudioTests/PlaybackSpeed.html
Source:
https://github.com/gruehle/gruehle.github.com/blob/master/AudioTests/PlaybackSpeed.html
Jer Noble
Comment 3
2026-03-26 20:08:47 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/61463
EWS
Comment 4
2026-03-27 12:46:52 PDT
Committed
310098@main
(08ffa75952b7): <
https://commits.webkit.org/310098@main
> Reviewed commits have been landed. Closing PR #61463 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug