tHTMLMediaElement preservesPitch=false and playbackRate aren't correctly handled when hooked up to AudioContext rdar://93275149 https://bugs.webkit.org/show_bug.cgi?id=240405

Reviewed by Andy Estes.

Use the existing MultiChannelResampler in MediaElementAudioSourceNode to perform a sample rate
conversion when the playback rate of the attached HTMLMediaElement is non-1x. Additionally, have
the media element notify the audio node when the reported rate changes.

Test: webaudio/MediaElementAudioSource/mediaelementaudiosourcenode-playbackrate.html

* Source/WebCore/Modules/webaudio/MediaElementAudioSourceNode.cpp:
(WebCore::MediaElementAudioSourceNode::MediaElementAudioSourceNode):
(WebCore::MediaElementAudioSourceNode::setFormat):
(WebCore::MediaElementAudioSourceNode::setPlaybackRate):
(WebCore::MediaElementAudioSourceNode::updateResamplerIfNeeded):
(WebCore::MediaElementAudioSourceNode::process):
* Source/WebCore/Modules/webaudio/MediaElementAudioSourceNode.h:
* Source/WebCore/html/HTMLMediaElement.cpp:
(WebCore::HTMLMediaElement::mediaPlayerRateChanged):
* Source/WebCore/html/HTMLMediaElement.h:
(WebCore::HTMLMediaElement::reportedPlaybackRate const):

Canonical link: https://commits.webkit.org/310098@main